Доработка: все эндпоинты работают